[package]
name = "vx-benchmark"
version = "0.1.0"
edition = "2021"
description = "VX unified benchmark management system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loonghao/vx"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "vx_benchmark"
path = "src/lib.rs"
