[package]
name = "vx-cache"
version = { workspace = true }
edition = { workspace = true }
description = "Shared cache utilities for vx (modes, atomic writes, stats)"
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
