[package]
name = "vx-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for vx tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[dependencies]
vx-cache = { workspace = true }
vx-core = { workspace = true }
vx-config = { workspace = true, features = ["schema"] }
vx-ecosystem-pm = { workspace = true }
vx-env = { workspace = true }
vx-extension = { workspace = true }
vx-manifest = { workspace = true }
vx-migration = { workspace = true }
vx-paths = { workspace = true }
vx-shim = { workspace = true }
vx-metrics = { workspace = true }
vx-project-analyzer = { workspace = true }
vx-resolver = { workspace = true }
vx-runtime = { workspace = true }
vx-runtime-http = { workspace = true }
vx-setup = { workspace = true }
vx-args = { path = "../vx-args" }
# Providers
vx-provider-node = { workspace = true }
vx-provider-go = { workspace = true }
vx-provider-rust = { workspace = true }
vx-provider-uv = { workspace = true }
vx-provider-bun = { workspace = true }
vx-provider-pnpm = { workspace = true }
vx-provider-yarn = { workspace = true }
vx-provider-vscode = { workspace = true }
vx-provider-just = { workspace = true }
vx-provider-jq = { workspace = true }
vx-provider-deno = { workspace = true }
vx-provider-zig = { workspace = true }
vx-provider-java = { workspace = true }
vx-provider-terraform = { workspace = true }
vx-provider-kubectl = { workspace = true }
vx-provider-helm = { workspace = true }
vx-provider-rcedit = { workspace = true }
vx-provider-git = { workspace = true }
vx-provider-choco = { workspace = true }
vx-provider-brew = { workspace = true }
vx-provider-docker = { workspace = true }
vx-provider-awscli = { workspace = true }
vx-provider-azcli = { workspace = true }
vx-provider-gcloud = { workspace = true }
vx-provider-ninja = { workspace = true }
vx-provider-cmake = { workspace = true }
vx-provider-make = { workspace = true }
vx-provider-protoc = { workspace = true }
vx-provider-task = { workspace = true }
vx-provider-ollama = { workspace = true }
vx-provider-spack = { workspace = true }

vx-provider-python = { workspace = true }
vx-provider-msvc = { workspace = true }
vx-provider-ffmpeg = { workspace = true }
vx-provider-gh = { workspace = true }
vx-provider-imagemagick = { workspace = true }
vx-provider-nasm = { workspace = true }
vx-provider-pwsh = { workspace = true }
vx-provider-dotnet = { workspace = true }
vx-provider-msbuild = { workspace = true }
vx-provider-nuget = { workspace = true }
vx-provider-winget = { workspace = true }
vx-provider-dagu = { workspace = true }
vx-provider-prek = { workspace = true }
vx-provider-actrun = { workspace = true }
# Dockerfile linter
vx-provider-hadolint = { workspace = true }
# Tier 1: Unix-philosophy tools (RFC 0030)
vx-provider-fzf = { workspace = true }
vx-provider-ripgrep = { workspace = true }
vx-provider-fd = { workspace = true }
vx-provider-bat = { workspace = true }
vx-provider-yq = { workspace = true }
vx-provider-starship = { workspace = true }
# vcpkg - C++ package manager
vx-provider-vcpkg = { workspace = true }
# Jujutsu - Git-compatible DVCS
vx-provider-jj = { workspace = true }
# Bridge framework for embedded bridge binaries (MSBuild.exe etc.)
vx-bridge = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
which = { workspace = true }
strsim = "0.11"
paste = "1.0"
async-trait = { workspace = true }
dotenvy = "0.15"
self-replace = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toon-format = "0.4"

# Self-updater library for cargo-dist integration
axoupdater = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[features]
# Default features for most platforms
default = ["cdn-acceleration", "self-update"]
# CDN acceleration for faster downloads in China (uses rustls, no OpenSSL required)
cdn-acceleration = ["vx-runtime-http/cdn-acceleration"]
# Self-update via axoupdater (cargo-dist receipt-based fast path)
self-update = ["axoupdater"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "sync"] }
rstest = { workspace = true }
tokio-test = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
anyhow = { workspace = true }
vx-paths = { workspace = true }
serial_test = { workspace = true }
