[package]
name = "vx-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for vx tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[dependencies]
vx-cache = { workspace = true }
vx-core = { workspace = true }
vx-console = { path = "../vx-console" }
vx-starlark = { workspace = true }
vx-config = { workspace = true, features = ["schema"] }
vx-ecosystem-pm = { workspace = true }
vx-env = { workspace = true }
vx-extension = { workspace = true }
vx-migration = { workspace = true }
vx-paths = { workspace = true }
vx-shim = { workspace = true }
vx-metrics = { workspace = true }
vx-project-analyzer = { workspace = true }
vx-resolver = { workspace = true }
vx-runtime = { workspace = true }
vx-runtime-http = { workspace = true }
vx-setup = { workspace = true }
vx-args = { path = "../vx-args" }
# Providers (active - have Cargo.toml)
vx-provider-bun = { workspace = true }
vx-provider-rcedit = { workspace = true }
vx-provider-choco = { workspace = true }
vx-provider-brew = { workspace = true }
vx-provider-make = { workspace = true }
vx-provider-nasm = { workspace = true }
vx-provider-python = { workspace = true }
vx-provider-msvc = { workspace = true }
vx-provider-ffmpeg = { workspace = true }
vx-provider-imagemagick = { workspace = true }
vx-provider-msbuild = { workspace = true }
vx-provider-7zip = { workspace = true }
vx-provider-actrun = { workspace = true }
# Dockerfile linter
vx-provider-hadolint = { workspace = true }
# Meson build system (PyPI package alias)
vx-provider-meson = { workspace = true }
# curl (system detection only)
vx-provider-curl = { workspace = true }
# Rez package manager (Python-based)
vx-provider-rez = { workspace = true }
# Cloud CLIs
vx-provider-awscli = { workspace = true }
vx-provider-azcli = { workspace = true }
vx-provider-gcloud = { workspace = true }
# Container & Kubernetes
vx-provider-docker = { workspace = true }
vx-provider-kubectl = { workspace = true }
vx-provider-helm = { workspace = true }
# CLI utilities
vx-provider-bat = { workspace = true }
vx-provider-fd = { workspace = true }
vx-provider-fzf = { workspace = true }
vx-provider-jq = { workspace = true }
vx-provider-yq = { workspace = true }
vx-provider-ripgrep = { workspace = true }
# Build systems
vx-provider-cmake = { workspace = true }
vx-provider-ninja = { workspace = true }
vx-provider-protoc = { workspace = true }
# Runtimes
vx-provider-deno = { workspace = true }
vx-provider-java = { workspace = true }
vx-provider-dotnet = { workspace = true }
vx-provider-rust = { workspace = true }
vx-provider-zig = { workspace = true }
vx-provider-go = { workspace = true }
vx-provider-node = { workspace = true }
# Node.js package managers
vx-provider-pnpm = { workspace = true }
vx-provider-yarn = { workspace = true }
# Package managers
vx-provider-nuget = { workspace = true }
vx-provider-uv = { workspace = true }
vx-provider-prek = { workspace = true }
vx-provider-vcpkg = { workspace = true }
vx-provider-winget = { workspace = true }
# DevOps & CI tools
vx-provider-terraform = { workspace = true }
vx-provider-gh = { workspace = true }
vx-provider-release-please = { workspace = true }
vx-provider-task = { workspace = true }
vx-provider-dagu = { workspace = true }
# Shell & terminal
vx-provider-bash = { workspace = true }
vx-provider-pwsh = { workspace = true }
vx-provider-starship = { workspace = true }
# Version control
vx-provider-git = { workspace = true }
vx-provider-jj = { workspace = true }
# AI & services
vx-provider-ollama = { workspace = true }
# Editors & IDEs
vx-provider-vscode = { workspace = true }
# Security & crypto
vx-provider-openssl = { workspace = true }
# Build cache
vx-provider-sccache = { workspace = true }
vx-provider-ccache = { workspace = true }
vx-provider-buildcache = { workspace = true }
# Python ecosystem
vx-provider-pre-commit = { workspace = true }
vx-provider-spack = { workspace = true }
# Build tools
vx-provider-just = { workspace = true }
# Frontend tooling
vx-provider-nx = { workspace = true }
vx-provider-turbo = { workspace = true }
vx-provider-vite = { workspace = true }
# Platform-specific
vx-provider-systemctl = { workspace = true }
vx-provider-xcodebuild = { workspace = true }
# Bridge framework for embedded bridge binaries (MSBuild.exe etc.)
vx-bridge = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
which = { workspace = true }
strsim = "0.11"
async-trait = { workspace = true }
dotenvy = "0.15"
self-replace = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# toon-format: disable default features to avoid cli dependencies (syntect -> bincode 1.3.3)
# We only need the encode_default function for TOON serialization
toon-format = { version = "0.4", default-features = false }

# Self-updater library for cargo-dist integration
axoupdater = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[features]
# Default features for most platforms
default = ["cdn-acceleration", "self-update", "extended-formats"]
# CDN acceleration for faster downloads in China (uses rustls, no OpenSSL required)
cdn-acceleration = ["vx-runtime-http/cdn-acceleration"]
# Self-update via axoupdater (cargo-dist receipt-based fast path)
self-update = ["axoupdater"]
# Extended archive formats (7z, 7z SFX) - needed for Git for Windows etc.
extended-formats = ["vx-runtime-http/extended-formats"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "sync"] }
rstest = { workspace = true }
tokio-test = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
anyhow = { workspace = true }
vx-paths = { workspace = true }
serial_test = { workspace = true }
vx-runtime = { workspace = true, features = ["testing"] }
