[package]
name = "vx-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for vx tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[dependencies]
vx-cache = { workspace = true }
vx-runtime-core = { workspace = true }
vx-console = { path = "../vx-console" }
vx-starlark = { workspace = true }
vx-config = { workspace = true, features = ["schema"] }
vx-ecosystem-pm = { workspace = true }
vx-env = { workspace = true }
vx-extension = { workspace = true }
vx-migration = { workspace = true }
vx-paths = { workspace = true }
vx-shim = { workspace = true }
vx-metrics = { workspace = true }
vx-project-analyzer = { workspace = true }
vx-resolver = { workspace = true }
vx-runtime = { workspace = true }
vx-versions = { workspace = true }
vx-runtime-http = { workspace = true }
vx-setup = { workspace = true }
vx-args = { path = "../vx-args" }
# Providers (active - have Cargo.toml)
# Dockerfile linter
# Meson build system (PyPI package alias)
# curl (system detection only)
# Rez package manager (Python-based)
# Cloud CLIs
# Container & Kubernetes

# CLI utilities
# Build systems
# Runtimes
# Node.js package managers
# Package managers
# DevOps & CI tools
# Shell & terminal
# Version control
# AI & services
# Editors & IDEs
# Build cache

# Python ecosystem
# Build tools
# Frontend tooling
# Platform-specific
# Bridge framework for embedded bridge binaries (MSBuild.exe etc.)
vx-bridge = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
which = { workspace = true }
strsim = "0.11"
async-trait = { workspace = true }
dotenvy = "0.15"
self-replace = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# toon-format: disable default features to avoid cli dependencies (syntect -> bincode 1.3.3)
# We only need the encode_default function for TOON serialization
toon-format = { version = "0.4", default-features = false }

# Self-updater library for cargo-dist integration
axoupdater = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[features]
# Default features for most platforms
default = ["cdn-acceleration", "self-update", "extended-formats"]
# CDN acceleration for faster downloads in China (uses rustls, no OpenSSL required)
cdn-acceleration = ["vx-runtime-http/cdn-acceleration"]
# Self-update via axoupdater (cargo-dist receipt-based fast path)
self-update = ["axoupdater"]
# Extended archive formats (7z, 7z SFX) - needed for Git for Windows etc.
extended-formats = ["vx-runtime-http/extended-formats"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "sync"] }
rstest = { workspace = true }
tokio-test = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
anyhow = { workspace = true }
vx-paths = { workspace = true }
serial_test = { workspace = true }
vx-runtime = { workspace = true, features = ["testing"] }

[build-dependencies]
vx-star-metadata = { workspace = true }
