[package]
name = "vx-config"
version.workspace = true
edition.workspace = true
description = "Configuration management for vx"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
schemars = { version = "1.0", features = ["derive"] }
regex = { workspace = true }
sha2 = "0.10"
chrono = { workspace = true }
dirs = { workspace = true }
shellexpand = "3.1"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
