[package]
name = "vx-config"
version.workspace = true
edition.workspace = true
description = "Configuration management for vx"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
schemars = { version = "1.0", features = ["derive"], optional = true }
regex = { workspace = true }
sha2 = "0.10"
chrono = { workspace = true }
dirs = { workspace = true }
shellexpand = "3.1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = []
schema = ["dep:schemars"]

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
