[package]
name = "vx-console"
version.workspace = true
edition.workspace = true
description = "Unified console output system for vx"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["console", "terminal", "cli", "progress", "output"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
# Terminal handling (Cargo-style modern approach)
anstream = "1.0"
anstyle = "1.0"
console = { workspace = true }

# Progress bars
indicatif = { workspace = true }

# Cross-platform terminal
terminal_size = "0.4"

# Serialization (JSON mode)
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async support
tokio = { workspace = true, features = ["sync"] }

# Lazy initialization
once_cell = "1.19"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_System_Console",
  "Win32_Foundation",
] }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
pretty_assertions = { workspace = true }

[features]
default = ["progress"]
progress = []
