[package]
name = "vx-core"
version.workspace = true
edition.workspace = true
description = "Core traits and interfaces for vx tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
toml = { workspace = true }
figment = { version = "0.10", features = ["toml", "env"] }
regex = { workspace = true }
walkdir = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
zip = "4.0"
tar = "0.4"
flate2 = "1.0"
vx-shim = { path = "../vx-shim" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
rstest = { workspace = true }
tokio-test = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
anyhow = { workspace = true }
serial_test = { workspace = true }
