[package]
name = "vx-core"
version.workspace = true
edition.workspace = true
description = "Core traits and interfaces for vx tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies only - following YAGNI principle
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
dirs = "6.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
rstest = { workspace = true }
tokio-test = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
anyhow = { workspace = true }
serial_test = { workspace = true }
