[package]
name = "vx-dependency"
version.workspace = true
edition.workspace = true
description = "Dependency resolution and management for vx tools"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
