[package]
name = "vx-ecosystem-pm"
version.workspace = true
edition.workspace = true
description = "Development ecosystem package managers for vx (npm, pip, cargo, uv, bun, etc.)"
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["process", "fs"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Path utilities
which = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"

[features]
default = []
