[package]
name = "vx-env"
version.workspace = true
edition.workspace = true
description = "Environment management for vx tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
shell-words = "1.1"
vx-paths = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
