[package]
name = "vx-env"
version.workspace = true
edition.workspace = true
description = "Environment management for vx tool manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
shell-words = "1.1"
vx-paths = { workspace = true }
vx-config = { workspace = true }
vx-resolver = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
rust-embed = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
