[package]
name = "vx-executor"
version.workspace = true
edition.workspace = true
description = "Dynamic tool executor with dependency resolution and auto-installation"
license.workspace = true
repository.workspace = true

[dependencies]
vx-plugin = { version = "0.4.0", path = "../vx-plugin" }
vx-paths = { version = "0.3.1", path = "../vx-paths" }
vx-dependency = { version = "0.4.0", path = "../vx-dependency" }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
