[package]
name = "vx-extension"
version.workspace = true
edition.workspace = true
description = "Extension system for vx - execute scripts using vx-managed runtimes"
license.workspace = true
repository.workspace = true

[dependencies]
vx-core = { workspace = true }
vx-manifest = { workspace = true }
vx-paths = { workspace = true }
vx-runtime = { workspace = true }
vx-args = { path = "../vx-args" }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
walkdir = { workspace = true }
dotenvy = "0.15"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
